--- a/Java e Javascript/javascript Dario/Es_Twitter/css/twitter.css
+++ b/Java e Javascript/javascript Dario/Es_Twitter/css/twitter.css
@@ -12,13 +12,17 @@
 body {
     background-color:#252e35;
 }
-#nome, #password, #login {
+#nome, #password{
    
     display: block;
-    margin: 0 auto;
+    margin: 5% auto;
     padding: auto; 
     padding: 10px 20px; 
     border-radius: 32px;
+    width: 100%; 
+  max-width: 100%; 
+  height: 40px; 
+  box-sizing: border-box; 
 }
 
 #demo{
@@ -48,3 +52,97 @@ color: antiquewhite;
     
 }
 
+#login {
+    align-items: center;
+    margin: 5% auto;
+   
+    padding: auto; 
+    padding: 10px 20px; 
+    border-radius: 32px;
+    border: 4px solid transparent;
+    background: linear-gradient(white, white) padding-box, linear-gradient(120deg, darkblue, cyan) border-box;
+    color:black;
+    width: 100%; 
+    max-width: 100%; 
+    height: 40px; 
+    box-sizing: border-box; 
+}
+
+#box {
+max-width: 600px;
+  margin: 0 auto; 
+  padding: 10px;
+}
+
+/* //////////////////////////////////////////////////////////////////////PAG 2/////////////////////////////////////////////////////////////*/
+.icona img{
+    height: 5rem;
+    width: auto;
+    float:left;
+    margin-right: 1rem;
+    margin-top: 0.5rem;
+    
+}
+
+#btnInvio {
+    align-items: center;
+    margin: 5% auto;
+    padding: auto;   
+    border-radius: 32px;
+    border: 4px solid transparent;
+    background: linear-gradient(white, white) padding-box, linear-gradient(120deg, darkblue, cyan) border-box;
+    color:black;
+    width: 30%; 
+    max-width: 30%; 
+    height: 40px; 
+    box-sizing: border-box; 
+    float: right;
+    margin-right: 4rem ;
+    margin-top: 0.1rem;
+    
+    
+
+}
+#btnInvio:hover {
+    background:linear-gradient(120deg, darkblue, cyan)padding-box,linear-gradient(white, white) border-box;
+    transition: 0.3s;
+}
+.container2 {
+    width: 40%;
+    height: auto;
+    align-items: center;
+    margin: 10% auto;
+    background-color: rgb(0, 0, 0);
+    padding: 0% 5% 15% 5%;
+    padding-top: 0.1rem;
+    border-radius: 15px;
+   
+}
+#conta2{
+    color: white;
+    height: 1;
+    margin-left: 9rem;
+}
+#textarea{
+    text-align: center;
+    background-color: black;
+    border: solid white;
+    border-radius: 32px;
+    color: white;
+    width: 80%; 
+    max-width: 100%; 
+    height: 100px; 
+    box-sizing: border-box; 
+}
+#boxMessaggi{
+    text-align: center;
+    background-color: black;
+    border: solid white;
+    border-radius: 32px;
+    color: white;
+    width: 80%; 
+    max-width: 100%;    
+    box-sizing: border-box; 
+    margin-top: 3rem;
+    margin-left: 6rem;
+}
