--- a/Java e Javascript/javascript Dario/Es_POKEDEXcopia/css/login.css
+++ b/Java e Javascript/javascript Dario/Es_POKEDEXcopia/css/login.css
@@ -1,30 +1,20 @@
 body{
     background-color: #7a1d1d;
-    background-image: url(/Es_POKEDEXcopia/img/sfondopokemontrasparente.png);
+    background-image: url(/Es_POKEDEXcopia/img/sfondopokemontrasparente.png), url(/Es_POKEDEXcopia/img/trainerf2.png);
     background-repeat: no-repeat;
     background-attachment: fixed;
 
+    background-attachment: fixed;
+    background-position: 66%, 26%;
     
-    background-position: 66%;
-    background-size:20%
+    background-size:20%, 16%;
+
     
     
     
     
 }
 
-.overlay{
-    background-color: rgba(0, 0, 0, 0.7);
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            z-index: 999;
-}
 
 .bottone{
     height: 5rem;
@@ -33,13 +23,11 @@ body{
     left: 50%;
 }
 
-/* .card{
-    
-    
+ .card{
+    position: absolute;
     left: 40%;
-    top:15%;
-    height: 400px;
-} */
+    height: 30rem;
+} 
 .navbar{
     
     background-color: #7a1d1d;
@@ -48,9 +36,7 @@ body{
 }
 
 .page-footer{
-    border-top: 10px solid #000;
-    
-    
+    border-top: 10px solid #000;  
 }
 
 h5, p, li {
