--- a/Java e Javascript/javascript Dario/ProjectWork/css/Homepage.css
+++ b/Java e Javascript/javascript Dario/ProjectWork/css/Homepage.css
@@ -50,3 +50,38 @@
 .containerTesto p{
   text-align: center;
 }
+
+/* .carosello.swiper-horizontal > .swiper-pagination-bullets,
+.swiper-pagination-bullets.swiper-pagination-horizontal,
+.swiper-pagination-custom,
+.swiper-pagination-fraction {
+	position: relative;
+	bottom: auto;
+	padding: 1rem 0;
+}
+
+.carosello .swiper-pagination-bullet {
+	background: rgba(255, 255, 255, 0.6);
+}
+
+.carosello .swiper-pagination-bullet.swiper-pagination-bullet-active {
+	background: #888686;
+} */
+
+
+.carousel-inner{
+  padding: 1em;
+}
+.card{
+  margin: 0 .5em;
+  box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
+  border: none;
+}
+.carousel-control-prev, .carousel-control-next{
+  background-color: #e1e1e1;
+  width: 6vh;
+  height: 6vh;
+  border-radius: 50%;
+  top: 50%;
+  transform: translateY(-50%);
+}
