--- a/Java e Javascript/javascript Dario/ProjectWork/css/prova3.css
+++ b/Java e Javascript/javascript Dario/ProjectWork/css/prova3.css
@@ -68,6 +68,7 @@ header{
 .accesso:hover{
     color: var(--primary);
 }
+
 .banner{
     position: relative;
     width: 100%;
@@ -113,7 +114,8 @@ header{
 }
 
 .titolo{
-    max-width: 250px;
+    max-width: 350px;
+    
 }
 
 .banner .content h4{
@@ -202,13 +204,14 @@ header{
 
 .carousel .carousel-item{
     width: 250px;
+    height: 500px;
     cursor: pointer;
     display: flex;
 }
     
 .carousel .carousel-item img{
     max-width: 235px;
-    
+    margin-top: 50%;
     border-radius: 10px;
     transform: translateX(8px) translateY(-100px);
     object-fit: cover;
