--- a/Java e Javascript/javascript Dario/ProjectWork/css/prova3.css
+++ b/Java e Javascript/javascript Dario/ProjectWork/css/prova3.css
@@ -204,14 +204,15 @@ header{
 
 .carousel .carousel-item{
     width: 250px;
-    height: 500px;
+    height: 580px;
     cursor: pointer;
     display: flex;
+    object-position: center;
 }
     
 .carousel .carousel-item img{
     max-width: 235px;
-    margin-top: 50%;
+    margin-top: 70%;
     border-radius: 10px;
     transform: translateX(8px) translateY(-100px);
     object-fit: cover;
