--- a/Java e Javascript/javascript Dario/ProjectWork/css/tabs.css
+++ b/Java e Javascript/javascript Dario/ProjectWork/css/tabs.css
@@ -4,16 +4,16 @@ section {
 
 section .section-title {
     text-align: center;
-    color: #64706d;
+    color: #ffffff;
     margin-bottom: 2rem;
     text-transform: uppercase;
 }
 #tabs{
-	background: #64706d;
-    color: #eee;
+	background: #ffffff;
+    color: #000000;
 }
 #tabs h6.section-title{
-    color: #eee;
+    color: #000000;
 }
 
 /* short end: flex grow(quanto un elemento deve crescere rispetto ai suoi fratelli), flex shrink(e' l'abilita'di un elemento flex di rimpicciolire se necessario) , flex basis(definisce una grandezza di default dell'elemento, es dargli una width)  
@@ -21,9 +21,9 @@ gli stiamo dicendo di dividersi equamente lo stesso spazio*/
 
 
 #tabs .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
-    color: #ffffff;
+    color: #5f2525;
     background-color: transparent;
-    border-color: transparent transparent #ffffff;
+    border-color: transparent transparent #751b1b;
     border-bottom: 4px solid !important;
     font-size: 1.2rem;
     font-weight: bold;
@@ -32,7 +32,7 @@ gli stiamo dicendo di dividersi equamente lo stesso spazio*/
     border: 1px solid transparent;
     border-top-left-radius: .25rem;
     border-top-right-radius: .25rem;
-    color: #ffffff;
+    color: #903838;
     font-size: 1.2rem;
 }
 
