--- a/Java e Javascript/javascript Dario/ProjectWork/css/tabs.css
+++ b/Java e Javascript/javascript Dario/ProjectWork/css/tabs.css
@@ -10,7 +10,7 @@ section .section-title {
 }
 #tabs{
 	background: #ffffff;
-    color: #000000;
+    color: #ffffff;
 }
 #tabs h6.section-title{
     color: #000000;
