--- a/Java e Javascript/javascript Dario/ProjectWork/css/tabs.css
+++ b/Java e Javascript/javascript Dario/ProjectWork/css/tabs.css
@@ -19,6 +19,9 @@ section .section-title {
 /* short end: flex grow(quanto un elemento deve crescere rispetto ai suoi fratelli), flex shrink(e' l'abilita'di un elemento flex di rimpicciolire se necessario) , flex basis(definisce una grandezza di default dell'elemento, es dargli una width)  
 gli stiamo dicendo di dividersi equamente lo stesso spazio*/
 
+.nav-fill{
+    border-bottom: 0;
+}
 
 #tabs .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
     color: #5f2525;
@@ -52,6 +55,14 @@ gli stiamo dicendo di dividersi equamente lo stesso spazio*/
     background-color: #fff;
     padding: 0.5rem;  
 }
+
+#contenuti{
+    background-color: #212121;
+}
+
+
+
+
 
 /* short end: flex grow(quanto un elemento deve crescere rispetto ai suoi fratelli), flex shrink(e' l'abilita'di un elemento flex di rimpicciolire se necessario) , flex basis(definisce una grandezza di default dell'elemento, es dargli una width)  
 gli stiamo dicendo di dividersi equamente lo stesso spazio*/
