--- a/Java e Javascript/javascript Dario/ProjectWork/css/tabs.css
+++ b/Java e Javascript/javascript Dario/ProjectWork/css/tabs.css
@@ -57,8 +57,28 @@ gli stiamo dicendo di dividersi equamente lo stesso spazio*/
 }
 
 #contenuti{
-    background-color: #212121;
+    background-color: #212529;
 }
+
+ .data{
+    text-align: center;
+    padding-left: 20%;
+   
+}
+
+.data-futuri{
+    font-size: 1.5rem;
+    text-align: center;
+    padding-left: 40%;
+   
+}
+
+.btn-warning .data-futuri{
+    justify-content: center;
+}
+
+
+
 
 
 
