--- a/Java e Javascript/javascript Dario/ProjectWork/css/Homepage.css
+++ b/Java e Javascript/javascript Dario/ProjectWork/css/Homepage.css
@@ -86,4 +86,14 @@
   transform: translateY(-50%);
 }
 
-
+.freccia{
+  text-align: center;
+  width: 50px;
+  height: 50px;
+  position: fixed;
+  bottom: 50px;
+  right: 20px;
+  z-index: 99999;
+  border-width: 1px;
+  border-style: solid;
+}
