--- a/Java e Javascript/javascript Dario/ProjectWork/css/eventifuturi.css
+++ b/Java e Javascript/javascript Dario/ProjectWork/css/eventifuturi.css
@@ -67,7 +67,8 @@ gli stiamo dicendo di dividersi equamente lo stesso spazio*/
 }
 
 .data-futuri{
-    font-size: 1.5rem;
+    color:#000000;
+    font-size: 1.4rem;
     text-align: center;
     padding-left: 40%;
    
