--- a/Java e Javascript/javascript Dario/ProjectWork/css/provaBootstrap.css
+++ b/Java e Javascript/javascript Dario/ProjectWork/css/provaBootstrap.css
@@ -246,7 +246,7 @@ header {
 	height: 400px;
 	cursor: pointer;
 	display: flex;
-
+	border-radius: 10px;
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
